# news

./: README.md  news_aggregator.py  pyproject.toml  sources.yaml
.github/workflows/: news.yaml
dataset/2025/09/26/: news.jsonl  news.parquet
dataset/2025/09/27/: news.jsonl  news.parquet
dataset/2025/09/28/: news.jsonl  news.parquet
dataset/2025/09/29/: news.jsonl  news.parquet
dataset/2025/09/30/: news.jsonl  news.parquet
dataset/2025/10/01/: news.jsonl  news.parquet
dataset/2025/10/02/: news.jsonl  news.parquet
dataset/2025/10/03/: news.jsonl  news.parquet
dataset/2025/10/04/: news.jsonl  news.parquet
dataset/2025/10/05/: news.jsonl  news.parquet
dataset/2025/10/06/: news.jsonl  news.parquet
dataset/2025/10/07/: news.jsonl  news.parquet
dataset/2025/10/08/: news.jsonl  news.parquet
dataset/2025/10/09/: news.jsonl  news.parquet
dataset/2025/10/10/: news.jsonl  news.parquet
dataset/2025/10/11/: news.jsonl  news.parquet
dataset/2025/10/12/: news.jsonl  news.parquet
dataset/2025/10/13/: news.jsonl  news.parquet
dataset/2025/10/14/: news.jsonl  news.parquet
dataset/2025/10/15/: news.jsonl  news.parquet
dataset/2025/10/16/: news.jsonl  news.parquet
dataset/2025/10/17/: news.jsonl  news.parquet
dataset/2025/10/18/: news.jsonl  news.parquet
dataset/2025/10/19/: news.jsonl  news.parquet
dataset/2025/10/20/: news.jsonl  news.parquet
dataset/2025/10/21/: news.jsonl  news.parquet
dataset/2025/10/22/: news.jsonl  news.parquet
dataset/2025/10/23/: news.jsonl  news.parquet
dataset/2025/10/24/: news.jsonl  news.parquet
(+2 files in other folders)
